fixes docker setup